# soauth

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: pytest.yml  release.yml
docs/: README.md  api_keys.md  consume.md  create.md  developing.md  hosting.md  index.md  introduction.md  organizations.md  sample.md
soauth/api/: __init__.py  admin.py  app.py  app_manager.py  appmanager.py  dependencies.py  docs.py  groups.py  keys.py  login.py  members.py  setup.py  user.py
soauth/app/: app.py  apps.py  dependencies.py  groups.py  institutions.py  keys.py  templating.py  users.py
soauth/app/templates/: app_creation.html  app_detail.html  apps.html  core.html  group_detail.html  groups.html  index.html  index.jinja2  institution_detail.html  institutions.html  key_detail.html  keys.html  test.html  user_detail.html  users.html
soauth/config/: managers.py  settings.py
soauth/core/: app.py  auth.py  cryptography.py  group.py  hashing.py  jwt.py  members.py  models.py  random.py  tokens.py  user.py  uuid.py
soauth/database/: app.py  auth.py  group.py  login.py  members.py  meta.py  user.py
soauth/scripts/: cli.py
soauth/service/: app.py  auth.py  flow.py  github.py  groups.py  login.py  membership.py  mock.py  provider.py  refresh.py  user.py
soauth/toolkit/: client.py  consumer.py  fastapi.py  starlette.py
tests/: conftest.py
tests/test_service/: conftest.py  test_app.py  test_flow.py  test_group.py  test_refresh.py  test_user.py
