[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soauth"
version = "0.0.1a1"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "sqlmodel",
    "psycopg_binary",
    "asyncpg",
    "psycopg",
    "sqlalchemy[asyncio]",
    "pyjwt[crypto]",
    "cryptography",
    "bcrypt",
    "httpx",
    "xxhash",
    "fastapi",
    "structlog",
    "uuid7"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "coverage",
    "pytest-cov",
    "pre-commit",
    "testcontainers[postgres]"
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
source = [
    "soauth",
]